# api/src/Yorozu.Contracts/ContentItems/ChangeContentItemRequest.cs
@@ -1,7 +1,7 @@
 namespace Yorozu.Contracts.ContentItems;
 
 public sealed record ChangeContentItemRequest {
-    public required FlagAction? IsSecret { get; init; }
-    public required FlagAction? IsFavorited { get; init; }
-    public required FlagAction? IsBookmarked { get; init; }
+    public FlagAction? IsSecret { get; init; }
+    public FlagAction? IsFavorited { get; init; }
+    public FlagAction? IsBookmarked { get; init; }
 }
